--- a/sass/_restaurant.scss
+++ b/sass/_restaurant.scss
@@ -3,24 +3,13 @@
   background-color: #eaeaea;
   margin-top: 8em;
   padding-bottom: 7em;
+  h2 {
+    padding-top: 3em;
+    margin-left: 2em;
+    margin-bottom: 3em;
+  }
   @media (min-width: 64em) {
     margin-top: 4em;
-  }
-}
-
-#restaurants h2 {
-  padding-top: 3em;
-  margin-left: 2em;
-  margin-bottom: 3em;
-}
-
-.vignette-restaurant img {
-  width: 100%;
-  height: 22em;
-  object-fit: cover;
-  border-radius: 30px 30px 0 0;
-  @media (min-width: 64em) {
-    height: 10em;
   }
 }
 
@@ -37,6 +26,27 @@
     width: 20%;
     height: 15em;
   }
+  img {
+    width: 100%;
+    height: 22em;
+    object-fit: cover;
+    border-radius: 30px 30px 0 0;
+    @media (min-width: 64em) {
+      height: 10em;
+    }
+  }
+  h3 {
+    margin-top: 0.5em;
+    margin-left: 1.5em;
+    color: black;
+  }
+  h4 {
+    margin-left: 1.5em;
+    margin-top: -1em;
+    padding-bottom: 2em;
+    color: black;
+    font-weight: normal;
+  }
 }
 
 .nouveaute p {
@@ -51,20 +61,6 @@
   }
 }
 
-.vignette-restaurant h3 {
-  margin-top: 0.5em;
-  margin-left: 1.5em;
-  color: black;
-}
-
-.vignette-restaurant h4 {
-  margin-left: 1.5em;
-  margin-top: -1em;
-  padding-bottom: 2em;
-  color: black;
-  font-weight: normal;
-}
- 
 .icone-vide {
   font-size: 4em;
   position: absolute;
@@ -94,5 +90,5 @@
     background: linear-gradient(to bottom, #FF79da, #9356dc);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-  }
+}
 }
