--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,3 +13,60 @@ body li {
 h1, .pied-de-page h3 {
   font-family: 'shrikhand' , cursive;
 }
+
+.loader {
+  position: absolute;
+  width: 99%;
+  height: 100%;
+  background-color: #000;
+  color: lighten( #000, 0%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lettre {
+  color: #9356dc;
+  font-size: 90px;
+  letter-spacing: 25px;
+  font-family: 'shrikhand';
+  animation: flash 3s linear infinite;
+  -webkit-animation: flash 1.2s linear infinite;
+}
+@keyframes flash {
+  0% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+  90% {
+    color: #9356dc;
+    text-shadow: none;
+  }
+  100% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+}
+.lettre:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.lettre:nth-child(2) {
+  animation-delay: 0.2s;
+}.lettre:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.lettre:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.lettre:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.lettre:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.lettre:nth-child(7) {
+  animation-delay: 0.7s;
+}
+.lettre:nth-child(8) {
+  animation-delay: 0.8s;
+}
