--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -3,7 +3,7 @@ header .logo {
   width: 40em;
 }
 
-.fa-arrow-left {
+.fa-arrow-left { /*uniquement menu resto*/
   position: absolute;
   left: 1px;
   top: 1em;
@@ -17,9 +17,13 @@ header .logo {
   margin-top: 2em;
   width: 50%;
   padding-bottom: 2em;
+  @media (min-width: 64em) {
+    width: 20em;
+    margin-left: 40%;
+  }
 }
 
-section {     /*partie reservation*/
+section {     /*partie descriptif*/
   background-color: #f6f6f6;
   padding-bottom: 2em;
 }
@@ -33,20 +37,14 @@ section {     /*partie reservation*/
 }
 
 .fa-map-marker-alt {
-  position: absolute;
-  align-items: center;
-  top: 6em;
-  font-size: 1.5em;
-  @media (min-width: 64em) {
-    font-size: 3em;
-    top: 3em;
-  }
+  position: relative;
+  top: 1.2em;
+  font-size: 3.5em;
 }
 
 ::placeholder {
   padding-left: 1.5em;
   font-size: 3em;
-  padding-top: 1em;
   font-weight: bold;
 }
 
@@ -69,42 +67,63 @@ section {     /*partie reservation*/
   padding: 2em;
   background: linear-gradient(#FF79da, #9356dc);
   text-align: center;
+  a {
+    color: white;
+    font-weight: bold;
+  }
+  @media (min-width: 64em) {
+    width: 30%;
+    margin-left: 30%;
+  }
   &:hover {
-      opacity: 0.9;
-      box-shadow: 0 0 20px #FF79da;
-    }
+    filter: brightness(120%);
+  }
 }
-
-.bouton a {
-  color: white;
-  font-weight: bold;
-}
-
 article h2 {
   margin-left: 2em;
   margin-top: 4em;
 }
 
+.fonctionnement {
+  @media (min-width: 64em){
+    display: flex;
+    margin-left: 10%;
+  }
+}
 .fonctionnement li {
   background-color: #eaeaea;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
-  box-shadow: 0 0 20px #00000002;
   font-weight: bold;
   font-size: 0.9em;
+  @media (min-width: 64em) {
+    width: 80%;
+    padding: 1em ;
+    margin-left: 0.5em;
+  }
+  &:hover {
+    background-color: #e4c7dc;
+  }
 }
 
-.fonctionnement i {
+.fonctionnement i/*icone*/ {
   color: grey;
   margin-right: 4em;
+  @media (min-width: 64em) {
+    margin: 0.5em;
+    font-size: 2em;
+  }
 }
 
 .fonctionnement a {
   color: black;
   margin-left: 5em;
+  @media (min-width: 64em) {
+    margin-left: 1em;
+  }
 }
-
+  
 .numero {
   color: white;
   display: inline;
@@ -114,4 +133,7 @@ article h2 {
   font-size: 13px;
   border-radius: 50%;
   background-color: #9356dc;
+  @media (min-width: 64em) {
+    margin-right: 1em;
+  }
 }
