--- a/sass/style.css
+++ b/sass/style.css
@@ -14,6 +14,102 @@ h1, .pied-de-page h3 {
   font-family: 'shrikhand' , cursive;
 }
 
+.loader {
+  position: absolute;
+  width: 99%;
+  height: 100%;
+  background-color: #000;
+  color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.lettre {
+  color: #9356dc;
+  font-size: 90px;
+  letter-spacing: 25px;
+  font-family: 'shrikhand';
+  animation: flash 3s linear infinite;
+  -webkit-animation: flash 1.2s linear infinite;
+}
+
+@-webkit-keyframes flash {
+  0% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+  90% {
+    color: #9356dc;
+    text-shadow: none;
+  }
+  100% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+}
+
+@keyframes flash {
+  0% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+  90% {
+    color: #9356dc;
+    text-shadow: none;
+  }
+  100% {
+    color: #ff79da;
+    text-shadow: 0 0 7px #ff79da;
+  }
+}
+
+.lettre:nth-child(1) {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
+}
+
+.lettre:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+
+.lettre:nth-child(3) {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+}
+
+.lettre:nth-child(4) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.lettre:nth-child(5) {
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+.lettre:nth-child(6) {
+  -webkit-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.lettre:nth-child(7) {
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.lettre:nth-child(8) {
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+
 .pied-de-page {
   background-color: #353535;
   padding-bottom: 7em;
@@ -47,6 +143,7 @@ header .logo {
 }
 
 .fa-arrow-left {
+  /*uniquement menu resto*/
   position: absolute;
   left: 1px;
   top: 1em;
@@ -62,8 +159,15 @@ header .logo {
   padding-bottom: 2em;
 }
 
+@media (min-width: 64em) {
+  .contenaire-en-tete .logo {
+    width: 20em;
+    margin-left: 40%;
+  }
+}
+
 section {
-  /*partie reservation*/
+  /*partie descriptif*/
   background-color: #f6f6f6;
   padding-bottom: 2em;
 }
@@ -77,46 +181,32 @@ section {
 }
 
 .fa-map-marker-alt {
-  position: absolute;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  top: 6em;
-  font-size: 1.5em;
-}
-
-@media (min-width: 64em) {
-  .fa-map-marker-alt {
-    font-size: 3em;
-    top: 3em;
-  }
+  position: relative;
+  top: 1.2em;
+  font-size: 3.5em;
 }
 
 ::-webkit-input-placeholder {
   padding-left: 1.5em;
   font-size: 3em;
-  padding-top: 1em;
   font-weight: bold;
 }
 
 :-ms-input-placeholder {
   padding-left: 1.5em;
   font-size: 3em;
-  padding-top: 1em;
   font-weight: bold;
 }
 
 ::-ms-input-placeholder {
   padding-left: 1.5em;
   font-size: 3em;
-  padding-top: 1em;
   font-weight: bold;
 }
 
 ::placeholder {
   padding-left: 1.5em;
   font-size: 3em;
-  padding-top: 1em;
   font-weight: bold;
 }
 
@@ -145,15 +235,21 @@ section {
   text-align: center;
 }
 
-.bouton:hover {
-  opacity: 0.9;
-  -webkit-box-shadow: 0 0 20px #FF79da;
-          box-shadow: 0 0 20px #FF79da;
-}
-
 .bouton a {
   color: white;
   font-weight: bold;
+}
+
+@media (min-width: 64em) {
+  .bouton {
+    width: 30%;
+    margin-left: 30%;
+  }
+}
+
+.bouton:hover {
+  -webkit-filter: brightness(120%);
+          filter: brightness(120%);
 }
 
 article h2 {
@@ -161,15 +257,34 @@ article h2 {
   margin-top: 4em;
 }
 
+@media (min-width: 64em) {
+  .fonctionnement {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 10%;
+  }
+}
+
 .fonctionnement li {
   background-color: #eaeaea;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
-  -webkit-box-shadow: 0 0 20px #00000002;
-          box-shadow: 0 0 20px #00000002;
   font-weight: bold;
   font-size: 0.9em;
+}
+
+@media (min-width: 64em) {
+  .fonctionnement li {
+    width: 80%;
+    padding: 1em;
+    margin-left: 0.5em;
+  }
+}
+
+.fonctionnement li:hover {
+  background-color: #e4c7dc;
 }
 
 .fonctionnement i {
@@ -177,9 +292,22 @@ article h2 {
   margin-right: 4em;
 }
 
+@media (min-width: 64em) {
+  .fonctionnement i {
+    margin: 0.5em;
+    font-size: 2em;
+  }
+}
+
 .fonctionnement a {
   color: black;
   margin-left: 5em;
+}
+
+@media (min-width: 64em) {
+  .fonctionnement a {
+    margin-left: 1em;
+  }
 }
 
 .numero {
@@ -193,19 +321,16 @@ article h2 {
   background-color: #9356dc;
 }
 
-section img {
-  width: 100%;
-  position: absolute;
-  z-index: 0;
+@media (min-width: 64em) {
+  .numero {
+    margin-right: 1em;
+  }
 }
 
-@media (min-width: 64em) {
-  section img {
-    width: 60%;
-    height: auto;
-    margin-left: 20%;
-    position: none;
-  }
+section img {
+  width: 99%;
+  position: absolute;
+  z-index: 0;
 }
 
 .carte-restaurant {
@@ -213,7 +338,7 @@ section img {
   z-index: 1;
   top: 30em;
   margin-bottom: 30em;
-  width: 100%;
+  width: 99%;
   background-color: #f6f6f6;
   border-radius: 10em 10em 0 0;
   padding: 1em 0 4em 0.7em;
@@ -224,9 +349,22 @@ section img {
   margin-left: 0.5em;
 }
 
+.carte-restaurant h2 {
+  font-size: 3em;
+  border-bottom: 3px solid #99e2d0;
+  width: 10%;
+  margin-top: 2em;
+}
+
 .icone-menu-vide {
   position: absolute;
   margin-left: 15%;
+}
+
+@media (min-width: 64em) {
+  .icone-menu-vide {
+    margin-left: 25%;
+  }
 }
 
 .icone-menu-vide:hover {
@@ -239,6 +377,12 @@ section img {
   opacity: 0;
 }
 
+@media (min-width: 64em) {
+  .icone-menu-plein {
+    margin-left: 25%;
+  }
+}
+
 .icone-menu-plein:hover {
   -webkit-transition: all 0.2s linear 0.2s;
   transition: all 0.2s linear 0.2s;
@@ -247,13 +391,6 @@ section img {
   background: linear-gradient(to bottom, #FF79da, #9356dc);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-
-.carte-restaurant h2 {
-  font-size: 3em;
-  border-bottom: 3px solid #99e2d0;
-  width: 10%;
-  margin-top: 2em;
 }
 
 .plat {
@@ -276,10 +413,22 @@ section img {
   font-size: 0.9em;
 }
 
+@media (min-width: 64em) {
+  .plat h4 {
+    font-size: 1.5em;
+  }
+}
+
 .tarif {
   font-size: 3em;
   position: absolute;
   right: 1em;
+}
+
+@media (min-width: 64em) {
+  .tarif {
+    font-size: 1.5em;
+  }
 }
 
 #restaurants {
@@ -288,29 +437,15 @@ section img {
   padding-bottom: 7em;
 }
 
-@media (min-width: 64em) {
-  #restaurants {
-    margin-top: 4em;
-  }
-}
-
 #restaurants h2 {
   padding-top: 3em;
   margin-left: 2em;
   margin-bottom: 3em;
 }
 
-.vignette-restaurant img {
-  width: 100%;
-  height: 22em;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 30px 30px 0 0;
-}
-
 @media (min-width: 64em) {
-  .vignette-restaurant img {
-    height: 10em;
+  #restaurants {
+    margin-top: 4em;
   }
 }
 
@@ -333,18 +468,17 @@ section img {
   }
 }
 
-.nouveaute p {
-  background-color: #99e2d0;
-  color: #008766;
-  padding: 0.5em;
-  position: absolute;
-  font-size: 3em;
-  margin-left: 65%;
+.vignette-restaurant img {
+  width: 100%;
+  height: 22em;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 30px 30px 0 0;
 }
 
 @media (min-width: 64em) {
-  .nouveaute p {
-    font-size: 1em;
+  .vignette-restaurant img {
+    height: 10em;
   }
 }
 
@@ -360,6 +494,21 @@ section img {
   padding-bottom: 2em;
   color: black;
   font-weight: normal;
+}
+
+.nouveaute p {
+  background-color: #99e2d0;
+  color: #008766;
+  padding: 0.5em;
+  position: absolute;
+  font-size: 3em;
+  margin-left: 65%;
+}
+
+@media (min-width: 64em) {
+  .nouveaute p {
+    font-size: 1em;
+  }
 }
 
 .icone-vide {
