--- a/sass/_head.scss
+++ b/sass/_head.scss
@@ -1,6 +1,10 @@
 header .logo {
   margin-left: 20%;
   width: 40em;
+  @media (min-width: 1024px) {
+    width: 15em;
+    margin-left: 35%;
+  }
 }
 
 .fa-arrow-left { /*uniquement menu resto*/
@@ -12,12 +16,12 @@ header .logo {
   color: black;
 }
 
-.contenaire-en-tete .logo {
+.contenaire-en-tete .logo {/*menu des restaurants */
   margin-left: 20%;
   margin-top: 2em;
   width: 50%;
   padding-bottom: 2em;
-  @media (min-width: 64em) {
+  @media (min-width: 1024px) {
     width: 20em;
     margin-left: 40%;
   }
@@ -25,21 +29,32 @@ header .logo {
 
 section {     /*partie descriptif*/
   background-color: #f6f6f6;
-  padding-bottom: 2em;
+  padding-bottom: 4em;
 }
 
-.formulaire {
+.formulaire {/*recherche en fonction de la ville*/
   width: 100%;
-  height: 7em;
+  height: 8em;
+  margin-top: -2em;
+  text-align: center;
   background-color: #eaeaea;
   border: 1px solid #eaeaea;
-  border-top: 2px solid grey;
+  border-top: 1px solid grey;
+  @media (min-width: 1024px) {
+    height: 4em;
+  }
 }
 
 .fa-map-marker-alt {
   position: relative;
-  top: 1.2em;
+  margin-left: 30%;
+  top: 1em;
   font-size: 3.5em;
+  @media (min-width: 1024px) {
+    top: 0.5em;
+    font-size: 2.5em;
+    margin-left: 35%;
+  }
 }
 
 ::placeholder {
@@ -51,19 +66,21 @@ section {     /*partie descriptif*/
 .explorer h1 {
   text-align: center;
   font-size: 4em;
-  margin: 8% 10% 4% 10%;
+  @media (min-width: 1024px) {
+    font-size: 2em;
+  }
 }
 
 .explorer p {
   text-align: center;
-  @media (min-width: 64em) {
-    font-size: 2em;
+  @media (min-width: 1024px) {
+    font-size: 1.2em;
   }
 }
 
 .bouton {
   border-radius: 85px;
-  margin: 5em 10em;
+  margin: 5em 10em ;
   padding: 2em;
   background: linear-gradient(#FF79da, #9356dc);
   text-align: center;
@@ -71,9 +88,11 @@ section {     /*partie descriptif*/
     color: white;
     font-weight: bold;
   }
-  @media (min-width: 64em) {
-    width: 30%;
-    margin-left: 30%;
+  @media (min-width: 1024px) {
+    width: 15%;
+    margin-left: 40%;
+    margin-top: 2em;
+    margin-bottom: 1em;
   }
   &:hover {
     filter: brightness(120%);
@@ -82,27 +101,31 @@ section {     /*partie descriptif*/
 article h2 {
   margin-left: 2em;
   margin-top: 4em;
+  @media (min-width: 1024px) {
+    margin-top: 1em;
+  }
 }
 
 .fonctionnement {
-  @media (min-width: 64em){
+  @media (min-width: 1024px){
     display: flex;
-    margin-left: 10%;
   }
 }
 .fonctionnement li {
   background-color: #eaeaea;
+  box-shadow: 0 0 20px #0c0c0c2e;
   margin: 1em 3em 0em 3em;
   border-radius: 30px;
   padding: 3.5em 0;
   font-weight: bold;
   font-size: 0.9em;
-  @media (min-width: 64em) {
+  @media (min-width: 1024px) {
     width: 80%;
     padding: 1em ;
     margin-left: 0.5em;
   }
   &:hover {
+    box-shadow: 0 0 20px #e4c7dc;
     background-color: #e4c7dc;
   }
 }
@@ -110,7 +133,7 @@ article h2 {
 .fonctionnement i/*icone*/ {
   color: grey;
   margin-right: 4em;
-  @media (min-width: 64em) {
+  @media (min-width: 1024px) {
     margin: 0.5em;
     font-size: 2em;
   }
@@ -119,8 +142,9 @@ article h2 {
 .fonctionnement a {
   color: black;
   margin-left: 5em;
-  @media (min-width: 64em) {
-    margin-left: 1em;
+  @media (min-width: 1024px) {
+    margin-left: 0.1em;
+    width: 40%;
   }
 }
   
@@ -129,11 +153,11 @@ article h2 {
   display: inline;
   margin-left: -20px;
   margin-right: 5em;
-  padding: 1.5em;
+  padding: 1em;
   font-size: 13px;
   border-radius: 50%;
   background-color: #9356dc;
-  @media (min-width: 64em) {
+  @media (min-width: 1024px) {
     margin-right: 1em;
   }
 }
