--- a/sass/style.css
+++ b/sass/style.css
@@ -1,5 +1,5 @@
 body h1 {
-  font-family: 'roboto' , sans-serif;
+  font-family: 'roboto', sans-serif;
 }
 
 body a {
@@ -395,6 +395,8 @@ article h2 {
 
 section img {
   width: 99%;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
   z-index: 0;
 }
@@ -449,7 +451,7 @@ section img {
 
 .icone-vide-menu {
   position: absolute;
-  margin-left: 14%;
+  margin-left: 12%;
   bottom: 95%;
 }
 
@@ -466,16 +468,16 @@ section img {
 
 .icone-plein-menu {
   position: absolute;
-  margin-left: 14%;
-  bottom: 95%;
+  margin-left: 11.5%;
+  bottom: 94.7%;
   opacity: 0;
-  font-size: 1.1em;
+  font-size: 1.3em;
 }
 
 @media (min-width: 1024px) {
   .icone-plein-menu {
-    left: 69.8%;
-    bottom: 94.9%;
+    left: 70%;
+    bottom: 94.7%;
   }
 }
 
@@ -511,6 +513,7 @@ section img {
 @-webkit-keyframes menu-delay {
   /*animation apparation des plats*/
   0% {
+    visibility: hidden;
     opacity: 0;
   }
   100% {
@@ -521,6 +524,7 @@ section img {
 @keyframes menu-delay {
   /*animation apparation des plats*/
   0% {
+    visibility: hidden;
     opacity: 0;
   }
   100% {
@@ -581,6 +585,7 @@ section img {
 .plat h3 {
   font-size: 2em;
   padding-top: 0.5em;
+  font-weight: bolder;
 }
 
 @media (min-width: 1024px) {
@@ -591,11 +596,13 @@ section img {
 
 h4 {
   margin-top: -1em;
-  font-size: 0.8em;
+  margin-right: 20%;
+  font-size: 0.9em;
+  font-weight: 100;
 }
 
 .tarif {
-  font-size: 3em;
+  font-size: 3.5em;
   position: absolute;
   right: 1em;
 }
