--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,13 +1,13 @@
-body h1 {
-  font-family: 'roboto', sans-serif;
-}
-
-body a {
-  text-decoration: none;
-}
-
-body li {
-  list-style: none;
+body {
+  h1 {
+    font-family: 'roboto', sans-serif;
+  }
+  a {
+    text-decoration: none;
+  }
+  li {
+    list-style: none;
+  }
 }
 
 .pied-de-page h3 {
