--- a/sass/_pages-menus.scss
+++ b/sass/_pages-menus.scss
@@ -28,47 +28,50 @@ section img {
       font-size: 2.5em;
     }
   }
-  h2 {
-    font-size: 3em;
-    border-bottom: 3px solid #99e2d0;
-    width: 10%;
-    margin-top: 2em;
+  .icone-vide-menu {
+    position: absolute;
+    margin-left: 6%;
     @media (min-width: 1024px) {
-      font-size: 1.7em;
+      margin-left: 50%;
+      bottom: 92%;
     }
+    &:hover {
+      opacity: 0;
+    }
+  }
+  .icone-plein-menu {
+    position: absolute;
+    margin-left: 6%;
+    opacity: 0;
+    @media (min-width: 1024px) {
+      margin-left: 50%;
+      bottom: 92%;
+    }
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.2s linear 0.2s;
+      opacity: 1;
+      background: linear-gradient(to bottom, #FF79da, #9356dc);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+  }
   }
 }
 
-.icone-vide-menu {
-  position: absolute;
-  margin-left: 12%;
-  bottom: 95%;
+.carte-menu h2 {
+  font-size: 3em;
+  border-bottom: 3px solid #99e2d0;
+  width: 10%;
+  margin-top: 2em;
   @media (min-width: 1024px) {
-    left: 70%;
-    bottom: 95%;
-  }
-  &:hover {
-    opacity: 0;
+    font-size: 1.7em;
   }
 }
-.icone-plein-menu {
-  position:absolute;
-  margin-left: 11.5%;
-  bottom: 94.7%;
-  opacity: 0;
-  font-size: 1.3em;
-  @media (min-width: 1024px) {
-    left: 70%;
-    bottom: 94.7%;
-  }
-  &:hover {
-    transition: all 0.2s linear 0.2s;
-    opacity: 1;
-    background: linear-gradient(to bottom, #FF79da, #9356dc);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-}
+
 
 .plat {
   position: relative;
@@ -78,71 +81,61 @@ section img {
   box-shadow: 0 0 20px #0000002e;
   padding-left: 2em;
   padding-bottom: 0.1em;
-  animation: 1.2s menu-delay ease-in-out ;
-  -webkit-animation: 1.2s menu-delay ease-in-out ;
-  @media (min-width: 1024px) {
-    width: 50%;
+ @media(min-width: 1024px){
+   position: relative;
+    width: 28%;
+    display: inline-block;
     }
     h3 {
-      font-size: 2em;
+      font-size: 1.6em;
       padding-top: 0.5em;
       font-weight: bolder;
       @media (min-width: 1024px) {
         font-size: 1.3em;
       }
     }
-    h4 {
+    p {
       margin-top: -1em;
-      margin-right: 20%;
       font-size: 0.9em;
       font-weight: 100;
-    }
-    .tarif {
-      font-size: 3.5em;
+    } 
+    .tarif p {
       position: absolute;
-      right: 1em;
+      left: 85%;
+      top: 80%;
+      font-size: 3em;
+      font-weight: bolder;
       @media (min-width: 1024px) {
         font-size: 1.5em;
+        top: 65%;
+        left: 80%;
       }
     }
+    .anim-container {
+      opacity: 0;
+      position: absolute;
+      left: 90%;
+      top: 50%;
   }
+}
 
-@keyframes menu-delay { /*animation apparation des plats*/
-  0% {
-    visibility: hidden;
-    opacity: 0;
-  }
-  100% {
+.descript-menu:hover {
+  .tarif {
+    transform: translateX(-3rem);
+    transform-origin: right;
+}
+  .anim-container {
+    position: absolute;
+    left: 90%;
+    top: 50%;
     opacity: 1;
+    width: 5em;
+    height: 100%;
+    align-items: center;
+    background-color:  blue;
   }
-}
-.plat:nth-child(1) {
-  animation-delay: 0.1s;
-}
-.plat:nth-child(2) {
-  animation-delay: 0.2s;
-}
-.plat:nth-child(3) {
-  animation-delay: 0.3s;
-}
-.plat:nth-child(4) {
-  animation-delay: 0.4s;
-}
-.plat:nth-child(5) {
-  animation-delay: 0.5s;
-}
-.plat:nth-child(6) {
-  animation-delay: 0.6s;
-}
-.plat:nth-child(7) {
-  animation-delay: 0.7s;
-}
-.plat:nth-child(8) {
-  animation-delay: 0.8s;
-}
-.plat:nth-child(9) {
-  animation-delay: 0.9s;
-}
-.plat:nth-child(10) {
-  animation-delay: 1s;
+  .fa-check-circle {
+    color: red;
+    font-size: 1em;
+  }
 }
