--- a/sass/style.css
+++ b/sass/style.css
@@ -186,7 +186,7 @@ header .logo {
   color: black;
 }
 
-.contenaire-en-tete .logo {
+header .logo {
   /*menu des restaurants */
   margin-left: 20%;
   margin-top: 2em;
@@ -195,7 +195,7 @@ header .logo {
 }
 
 @media (min-width: 1024px) {
-  .contenaire-en-tete .logo {
+  header .logo {
     width: 20em;
     margin-left: 40%;
   }
@@ -234,7 +234,7 @@ section {
 
 @media (min-width: 1024px) {
   .fa-map-marker-alt {
-    top: 0.5em;
+    top: 0.7em;
     font-size: 2.5em;
     margin-left: 35%;
   }
@@ -437,52 +437,37 @@ section img {
   }
 }
 
-.carte-restaurant h2 {
-  font-size: 3em;
-  border-bottom: 3px solid #99e2d0;
-  width: 10%;
-  margin-top: 2em;
-}
-
-@media (min-width: 1024px) {
-  .carte-restaurant h2 {
-    font-size: 1.7em;
-  }
-}
-
-.icone-vide-menu {
+.carte-restaurant .icone-vide-menu {
   position: absolute;
-  margin-left: 12%;
-  bottom: 95%;
+  margin-left: 6%;
 }
 
 @media (min-width: 1024px) {
-  .icone-vide-menu {
-    left: 70%;
-    bottom: 95%;
+  .carte-restaurant .icone-vide-menu {
+    margin-left: 50%;
+    bottom: 92%;
   }
 }
 
-.icone-vide-menu:hover {
+.carte-restaurant .icone-vide-menu:hover {
   opacity: 0;
 }
 
-.icone-plein-menu {
+.carte-restaurant .icone-plein-menu {
   position: absolute;
-  margin-left: 11.5%;
-  bottom: 94.7%;
+  margin-left: 6%;
   opacity: 0;
-  font-size: 1.3em;
 }
 
 @media (min-width: 1024px) {
-  .icone-plein-menu {
-    left: 70%;
-    bottom: 94.7%;
+  .carte-restaurant .icone-plein-menu {
+    margin-left: 50%;
+    bottom: 92%;
   }
 }
 
-.icone-plein-menu:hover {
+.carte-restaurant .icone-plein-menu:hover {
+  transform: scale(1.1);
   -webkit-transition: all 0.2s linear 0.2s;
   transition: all 0.2s linear 0.2s;
   opacity: 1;
@@ -490,6 +475,23 @@ section img {
   background: linear-gradient(to bottom, #FF79da, #9356dc);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.carte-menu h2 {
+  font-size: 3em;
+  border-bottom: 3px solid #99e2d0;
+  width: 10%;
+  margin-top: 2em;
+}
+
+@media (min-width: 1024px) {
+  .carte-menu h2 {
+    font-size: 1.7em;
+  }
 }
 
 .plat {
@@ -501,18 +503,18 @@ section img {
           box-shadow: 0 0 20px #0000002e;
   padding-left: 2em;
   padding-bottom: 0.1em;
-  animation: 1.2s menu-delay ease-in-out;
-  -webkit-animation: 1.2s menu-delay ease-in-out;
 }
 
 @media (min-width: 1024px) {
   .plat {
-    width: 50%;
+    position: relative;
+    width: 28%;
+    display: inline-block;
   }
 }
 
 .plat h3 {
-  font-size: 2em;
+  font-size: 1.6em;
   padding-top: 0.5em;
   font-weight: bolder;
 }
@@ -523,95 +525,58 @@ section img {
   }
 }
 
-.plat h4 {
+.plat p {
   margin-top: -1em;
-  margin-right: 20%;
   font-size: 0.9em;
   font-weight: 100;
 }
 
-.plat .tarif {
-  font-size: 3.5em;
+.plat .tarif p {
   position: absolute;
-  right: 1em;
+  left: 85%;
+  top: 80%;
+  font-size: 3em;
+  font-weight: bolder;
 }
 
 @media (min-width: 1024px) {
-  .plat .tarif {
+  .plat .tarif p {
     font-size: 1.5em;
+    top: 65%;
+    left: 80%;
   }
 }
 
-@-webkit-keyframes menu-delay {
-  /*animation apparation des plats*/
-  0% {
-    visibility: hidden;
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.plat .anim-container {
+  opacity: 0;
+  position: absolute;
+  left: 90%;
+  top: 50%;
 }
 
-@keyframes menu-delay {
-  /*animation apparation des plats*/
-  0% {
-    visibility: hidden;
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+.descript-menu:hover .tarif {
+  -webkit-transform: translateX(-3rem);
+          transform: translateX(-3rem);
+  -webkit-transform-origin: right;
+          transform-origin: right;
 }
 
-.plat:nth-child(1) {
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
+.descript-menu:hover .anim-container {
+  position: absolute;
+  left: 90%;
+  top: 50%;
+  opacity: 1;
+  width: 5em;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: blue;
 }
 
-.plat:nth-child(2) {
-  -webkit-animation-delay: 0.2s;
-          animation-delay: 0.2s;
-}
-
-.plat:nth-child(3) {
-  -webkit-animation-delay: 0.3s;
-          animation-delay: 0.3s;
-}
-
-.plat:nth-child(4) {
-  -webkit-animation-delay: 0.4s;
-          animation-delay: 0.4s;
-}
-
-.plat:nth-child(5) {
-  -webkit-animation-delay: 0.5s;
-          animation-delay: 0.5s;
-}
-
-.plat:nth-child(6) {
-  -webkit-animation-delay: 0.6s;
-          animation-delay: 0.6s;
-}
-
-.plat:nth-child(7) {
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
-}
-
-.plat:nth-child(8) {
-  -webkit-animation-delay: 0.8s;
-          animation-delay: 0.8s;
-}
-
-.plat:nth-child(9) {
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
-}
-
-.plat:nth-child(10) {
-  -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+.descript-menu:hover .fa-check-circle {
+  color: red;
+  font-size: 1em;
 }
 
 #restaurants {
@@ -750,6 +715,7 @@ section img {
 }
 
 .icone-plein:hover {
+  transform: scale(1.1);
   -webkit-transition: all 0.2s linear 0.2s;
   transition: all 0.2s linear 0.2s;
   opacity: 1;
@@ -757,5 +723,9 @@ section img {
   background: linear-gradient(to bottom, #FF79da, #9356dc);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 /*# sourceMappingURL=style.css.map */
