--- a/sass/_pages-menus.scss
+++ b/sass/_pages-menus.scss
@@ -71,17 +71,6 @@ section img {
     font-size: 1.7em;
   }
 }
-.descript-menu:hover {
-  .fa-check-circle {
-    opacity: 1;
-  }
-  .anim-container {
-    opacity: 1;
-  }
-  .tarif {
-    transform: translateX(-5rem);
-}
-}
 
 .descript-menu {
   position: relative;
@@ -90,11 +79,26 @@ section img {
   border-radius: 35px;
   box-shadow: 0 0 20px #0000002e;
   padding-left: 2em;
-  padding-bottom: 0.1em;
  @media(min-width: 1024px){
-    width: 25%;
+    width: 28%;
+    margin-right: 1em;
     border-radius: 20px;
-}
+    display: inline-block;
+  }
+  &:hover {
+    .fa-check-circle {
+      opacity: 1;
+    }
+    .anim-container {
+      opacity: 1;
+    }
+    .tarif {
+      transform: translateX(-8rem);
+      @media (min-width: 1024px) {
+        transform: translateX(-5em);
+      }
+    }
+  }
     h3 {
       font-size: 1.6em;
       padding-top: 0.5em;
@@ -109,15 +113,11 @@ section img {
       font-weight: 100;
     } 
     .tarif p {
-      position: absolute;
-      left: 85%;
-      top: 80%;
+      margin-left: 85%;
       font-size: 3em;
       font-weight: bolder;
       @media (min-width: 1024px) {
         font-size: 1.5em;
-        top: 65%;
-        left: 80%;
       }
     }
     .anim-container {
@@ -125,10 +125,10 @@ section img {
       background-color:  #99e2d0;
       border-radius: 0 35px 35px 0;
       position: absolute;
-      left: 85%;
+      left: 83%;
       top: 2%;
       @media (min-width: 1024px) {
-        left: 80%;
+        left: 83%;
         border-radius: 0 20px 20px 0;
   }
 }
@@ -136,7 +136,7 @@ section img {
     opacity: 0;
     color: white;
     font-size: 3em;
-    margin: 1em;
+    margin: 1.2em;
     @media (min-width: 1024px) {
       font-size: 2em;
       margin: 0.6em;
