--- a/sass/style.css
+++ b/sass/style.css
@@ -494,6 +494,25 @@ section img {
   }
 }
 
+.descript-menu {
+  position: relative;
+  width: 95%;
+  background-color: white;
+  border-radius: 35px;
+  -webkit-box-shadow: 0 0 20px #0000002e;
+          box-shadow: 0 0 20px #0000002e;
+  padding-left: 2em;
+}
+
+@media (min-width: 1024px) {
+  .descript-menu {
+    width: 28%;
+    margin-right: 1em;
+    border-radius: 20px;
+    display: inline-block;
+  }
+}
+
 .descript-menu:hover .fa-check-circle {
   opacity: 1;
 }
@@ -503,25 +522,14 @@ section img {
 }
 
 .descript-menu:hover .tarif {
-  -webkit-transform: translateX(-5rem);
-          transform: translateX(-5rem);
-}
-
-.descript-menu {
-  position: relative;
-  width: 95%;
-  background-color: white;
-  border-radius: 35px;
-  -webkit-box-shadow: 0 0 20px #0000002e;
-          box-shadow: 0 0 20px #0000002e;
-  padding-left: 2em;
-  padding-bottom: 0.1em;
+  -webkit-transform: translateX(-8rem);
+          transform: translateX(-8rem);
 }
 
 @media (min-width: 1024px) {
-  .descript-menu {
-    width: 25%;
-    border-radius: 20px;
+  .descript-menu:hover .tarif {
+    -webkit-transform: translateX(-5em);
+            transform: translateX(-5em);
   }
 }
 
@@ -544,9 +552,7 @@ section img {
 }
 
 .descript-menu .tarif p {
-  position: absolute;
-  left: 85%;
-  top: 80%;
+  margin-left: 85%;
   font-size: 3em;
   font-weight: bolder;
 }
@@ -554,8 +560,6 @@ section img {
 @media (min-width: 1024px) {
   .descript-menu .tarif p {
     font-size: 1.5em;
-    top: 65%;
-    left: 80%;
   }
 }
 
@@ -564,13 +568,13 @@ section img {
   background-color: #99e2d0;
   border-radius: 0 35px 35px 0;
   position: absolute;
-  left: 85%;
+  left: 83%;
   top: 2%;
 }
 
 @media (min-width: 1024px) {
   .descript-menu .anim-container {
-    left: 80%;
+    left: 83%;
     border-radius: 0 20px 20px 0;
   }
 }
@@ -579,7 +583,7 @@ section img {
   opacity: 0;
   color: white;
   font-size: 3em;
-  margin: 1em;
+  margin: 1.2em;
 }
 
 @media (min-width: 1024px) {
