--- a/sass/_pages-menus.scss
+++ b/sass/_pages-menus.scss
@@ -1,5 +1,6 @@
 section img {
   width: 99%;
+  padding-top: -4em;
   object-fit: cover;
   position: absolute;
   z-index: 0;
@@ -14,7 +15,7 @@ section img {
   top: 30em;
   margin-bottom: 30em;
   width: 99%;
-  background-color: #f6f6f6;
+  background-color: $background;
   border-radius: 10em 10em 0 0;
   padding: 1em 0 4em 0.7em;
   @media (min-width: 1024px) {
@@ -53,7 +54,7 @@ section img {
       transform: scale(1.1);
       transition: all 0.3s linear 0.2s;
       opacity: 1;
-      background: linear-gradient(to bottom, #FF79da, #9356dc);
+      background: linear-gradient(to bottom, $secondaire, $primaire);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       -webkit-transition: all 0.3s linear 0.2s;
@@ -66,7 +67,7 @@ section img {
 
 .carte-menu h2 {
   font-size: 3em;
-  border-bottom: 3px solid #99e2d0;
+  border-bottom: 3px solid $tertiaire ;
   width: 10%;
   margin-top: 2em;
   @media (min-width: 1024px) {
@@ -82,7 +83,7 @@ section img {
   border-radius: 35px;
   box-shadow: 0 0 20px #0000002e;
   padding-left: 2em;
- @media(min-width: 1024px){
+  @media(min-width: 1024px) {
     width: 28%;
     margin-right: 1em;
     margin-bottom: 1em;
@@ -120,7 +121,7 @@ section img {
       transition: width 0.5s linear;
       width: 0;
       height: 100%;
-      background-color:  #99e2d0;
+      background-color:  $tertiaire;
       border-radius: 0 35px 35px 0;
       position: absolute;
       right: 0;
@@ -132,6 +133,7 @@ section img {
       }
     }
     .fa-check-circle {
+      display: none;
       color: white;
       font-size: 3em;
       margin: 1.2em;
@@ -143,6 +145,7 @@ section img {
     }
     &:hover {
       .fa-check-circle {
+        display: inline-block;
         animation: rotation .5s linear ;
         -webkit-animation: rotation .5s linear ;
 }
